# DVC_course

./: .gitignore  Makefile  README.md  datadir.dvc  dvc.yaml  file.txt.dvc  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: cml.yaml
DVCLive_experiments/: .gitignore  Step8 Using DVCLive and Checkpoints in Deep Learning.ipynb  dvc.yaml  hymenoptera_data.dvc  params.yaml  pretrained_model_tuner.py  results.json
DVCLive_experiments/dvclive/: metrics.json
DVCLive_pratice/: .gitignore
dvc_plots/: index.html
figs/: dag.md
models/: model.joblib
notebooks/: step-0-prototype.ipynb  step-1-organize-ml-project.ipynb  step-2-create-config-file.ipynb  step-3-reusable-code.ipynb  step-4-build-ml-pipeline.ipynb  step-5-automate-ml-pipeline.ipynb  step-6-data-and-model-version-control.ipynb  step-7-metrics-and-experiments.ipynb
reports/: .gitignore  metrics.json
src/report/: visualize.py
src/stages/: data_load.py  data_split.py  evaluate.py  featurize.py  train.py
src/train/: train.py
src/utils/: __init__.py  logs.py
